force-app/main/default/objects/ContactExpense__c/ContactExpense__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Contacts and Expenses.</description>
    <label>Contact Expense</label>
    <nameField>
        <label>Contact Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>