force-app/main/default/objects/ContactExpense__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Expenses</relationshipLabel>
    <relationshipName>Contact_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>