force-app/main/default/objects/ContactExpense__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>Contact Expenses</relationshipLabel>
    <relationshipName>Contact_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>